AE: sometimes transparency is opacity
Change-Id: I084183a4ffc8e099b1510bb9dbf30fc6fd8b5d9f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -302,8 +302,8 @@
     <string name="brightness_icon_title">Brightness icon </string>
     <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
 
-    <!-- QS shade transparency -->
-    <string name="qs_transparent_shade">QS shade transparency</string>
+    <!-- QS shade opacity -->
+    <string name="qs_transparent_shade">QS shade opacity</string>
 
     <!-- QS header transparency -->
     <string name="qs_transparent_header">QS header transparency</string>
@@ -313,11 +313,11 @@
     <string name="qs_menu_item_titles_summaryOn">Labels are shown</string>
     <string name="qs_menu_item_titles_summaryOff">Labels are hidden</string>
 
-    <!-- Volume dialog transparency -->
-    <string name="volume_dialog_transparency">Volume dialog transparency</string>
+    <!-- Volume dialog opacity -->
+    <string name="volume_dialog_transparency">Volume dialog opacity</string>
 
-    <!-- Power menu and dialogs transparency -->
-    <string name="power_menu_transparency">Power/reboot menu transparency</string>
+    <!-- Power menu and dialogs opacity -->
+    <string name="power_menu_transparency">Power/reboot menu opacity</string>
 
     <!-- Power/reboot dialogs dim amount -->
     <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
