--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -649,4 +649,12 @@
     <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
     <string name="app_sidebar_hide_timeout_title">Appbar auto hide</string>
     <string name="app_sidebar_hide_timeout_summary">Timeout to auto hide Appbar.</string>
+
+    <!-- Header images -->
+    <string name="status_bar_custom_header_title">Custom header image</string>
+    <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
+    <string name="daylight_header_pack_title">Header image pack</string>
+    <string name="status_bar_custom_header_shadow_title">Header image shadow</string>
+    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
+    <string name="unit_percent">\u0025</string>
 </resources>
