AE: all tile scroller for quickbar settings [2/2]
Change-Id: Ied2b7873780ea1d477c1e3d5222d5f5864726f31

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -649,4 +649,8 @@
     <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
     <string name="app_sidebar_hide_timeout_title">Appbar auto hide</string>
     <string name="app_sidebar_hide_timeout_summary">Timeout to auto hide Appbar.</string>
+
+    <!-- qqs scroller -->
+    <string name="qqs_scroll_title">Scroll small QS tiles</string>
+    <string name="qqs_scroll_summary">Allow scrolling through the small QS tiles</string>
 </resources>
