SeekBarPreferenceCham: Fix using @string reference for unitsLeft and Right
Change-Id: I30cc0a230e5ebb517fffd18813ee516cc2e42e46

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -649,4 +649,6 @@
     <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
     <string name="app_sidebar_hide_timeout_title">Appbar auto hide</string>
     <string name="app_sidebar_hide_timeout_summary">Timeout to auto hide Appbar.</string>
+
+    <string name="unit_percent">\u0025</string>
 </resources>
