--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -588,4 +588,65 @@
     <string name="three_finger_gesture">Drei-Finger-Geste</string>
     <string name="three_finger_gesture_summary">Wische mit drei Fingern, um ein Bildschirmfoto aufzunehmen</string>
 
+    <!-- Blur UI -->
+    <string name="nav_blur_ui_title">Unschärfe-Anpassungen</string>
+    <string name="blur_ui_category_title">Unschärfe-Anpassungen</string>
+    <string name="blurred_status_bar_expanded_enabled_pref">Unschärfe Statusleiste</string>
+    <string name="blurred_status_bar_expanded_enabled_pref_summary">Verwischt den Hintergrund, wenn die Statusleiste heruntergezogen wird</string>
+    <string name="translucent_notifications_pref">Durchsichtige Benachrichtigungen</string>
+    <string name="translucent_notifications_pref_summary">Transparenz des Benachrichtigungshintergrunds erlauben</string>
+    <string name="translucent_header_pref">Unschärfe Statusleistenkopf</string>
+    <string name="translucent_header_pref_summary">Verwischt den Hintergrund der Statusleisten-Kopfzeilen</string>
+    <string name="translucent_quick_settings_pref">Unschärfe Schnelleinstellungsbereich</string>
+    <string name="translucent_quick_settings_pref_summary">Verwischt den Hintergrund der Schnelleinstellungen</string>
+    <string name="transluency_level_universal">Transparenz</string>
+    <string name="blur_expstatus_cat">Statusleiste</string>
+    <string name="blur_notifications_cat">Benachrichtigungen</string>
+    <string name="blur_header_cat">Statusleisten-Kopfzeilen</string>
+    <string name="blur_qs_cat">Schnelleinstellungen</string>
+    <string name="blur_recents_cat">Verlauf</string>
+    <string name="blurred_recent_app_enabled_pref">Unschärfe Anwendungsverlauf</string>
+    <string name="blurred_recent_app_enabled_pref_summary">Verwischt den Hintergrund des Anwendungsverlaufs</string>
+    <string name="blurred_scale">Größenordnung der Unschärfe</string>
+    <string name="blurred_scale_summary">Qualität des verwischten Bildes</string>
+    <string name="blurred_radius">Intensität der Unschärfe</string>
+    <string name="blurred_radius_summary">Stärke des Verwischens</string>
+    <string name="blur_cat_notice">Anmerkung</string>
+    <string name="blur_cat_notice_summary">Unschärfe-Anpassungen werden während Sicherheitsabfragen deaktiviert! Nur durchsichtige Benachrichtigungen bleiben aktiviert! Die Transparenz der Statusleiste und der Schnelleinstellungen werden automatisch deaktiviert!</string>
+    <string name="blurred_scale">Blur Scale</string>
+    <string name="blurred_scale_summary">Quality of blur image</string>
+    <string name="blurred_radius">Blur Radius</string>
+    <string name="blurred_radius_summary">Amount of blur</string>
+
+    <!-- App sidebar -->
+    <string name="app_sidebar_title">App-Seitenleiste</string>
+    <string name="app_sidebar_enable_title">App-Leiste einschalten</string>
+    <string name="app_sidebar_enable_summaryOn">App-Leiste ist eingeschaltet</string>
+    <string name="app_sidebar_enable_summaryOff">App-Leiste ist ausgeschaltet</string>
+    <string name="app_sidebar_setup_items_title">Inhalt der App-Leiste einrichten</string>
+    <string name="app_sidebar_setup_items_summary">Hinzufügen, Entfernen und Position von Apps in der Leiste</string>
+    <string name="app_sidebar_transparency_title">Transparenz der App-Leiste</string>
+    <string name="app_sidebar_transparency_summary">Anpassen der Transparenz-Stufe der App-Leiste</string>
+    <string name="app_sidebar_position_title">Position der App-Leiste</string>
+    <string name="app_sidebar_position_summary">Position der Leiste auf der linken oder rechten Bildschirmseite festlegen</string>
+    <string name="app_sidebar_position_left">Links</string>
+    <string name="app_sidebar_position_right">Rechts</string>
+    <string name="app_sidebar_hide_labels_title">Verstecke Beschriftung</string>
+    <string name="app_sidebar_hide_labels_summary">Blendet die Beschriftung der Symbole aus</string>
+    <string name="tab_category">Sichtbarer Auslösebereich</string>
+    <string name="use_tab_title">Auslösebereich anzeigen</string>
+    <string name="use_tab_summary">Stelle einen Auslösebereich an der Bildschirmseite dar, der die Leiste bei Berührung anzeigt.</string>
+    <string name="tab_position_title">Position des Auslösers</string>
+    <string name="tab_position_summary">Zeige den Auslösebereich oben, in der Mitte oder unten auf der Bildschirmseite an.</string>
+    <string name="tab_size_title">Größe des Auslösers</string>
+    <string name="tab_size_summary">Verändere die Größe des Auslösebereichs.</string>
+    <string name="trigger_category">Auslösebereich</string>
+    <string name="trigger_width_title">Breite des Auslösers</string>
+    <string name="trigger_width_summary">Breite des Auslösebereichs einstellen</string>
+    <string name="trigger_top_title">Position des Auslösers</string>
+    <string name="trigger_top_summary">Stelle die vertikale Position ein</string>
+    <string name="trigger_bottom_title">Höhe des Auslösers</string>
+    <string name="trigger_bottom_summary">Höhe des Auslösebereichs einstellen</string>
+    <string name="app_sidebar_hide_timeout_title">App-Leiste verstecken</string>
+    <string name="app_sidebar_hide_timeout_summary">Zeitspanne bis die Leiste sich automatisch ausblendet.</string>
 </resources>
