AE: updated de-translations
Change-Id: Ie3f258dbc182bf943f2f27644c96a5ed8e5ccbce
Signed-off-by: Ralf Luther <luther.ralf@gmail.com>

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -649,4 +649,16 @@
     <string name="trigger_bottom_summary">Höhe des Auslösebereichs einstellen</string>
     <string name="app_sidebar_hide_timeout_title">App-Leiste verstecken</string>
     <string name="app_sidebar_hide_timeout_summary">Zeitspanne bis die Leiste sich automatisch ausblendet.</string>
+
+    <!-- Header images -->
+    <string name="status_bar_custom_header_title">Eigens Hintergrundbild</string>
+    <string name="status_bar_custom_header_summary">Hintergrundbild für die Benachrichtigungsleiste aktivieren</string>
+    <string name="daylight_header_pack_title">Hintergrundbild-Paket</string>
+    <string name="status_bar_custom_header_shadow_title">Hintergrundbild-Schatten</string>
+    <string name="status_bar_custom_header_shadow_summary">Für eine bessere Sichtbarkeit bei hellen Hintergrundbildern</string>
+    <!-- <string name="unit_percent">\u0025</string> -->
+
+    <!-- qqs scroller -->
+    <string name="qqs_scroll_title">Mini-Kacheln blättern</string>
+    <string name="qqs_scroll_summary">Erlaubt das Blättern durch die Mini-Kacheln</string>
 </resources>
