AE: Lockscreen Colors [2/2]
Adapted for N

Change-Id: I4f8bfcaeabe4b03d636da246903030e93671fd75

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -728,4 +728,14 @@
     <string name="reset_android">Android</string>
     <string name="reset">Reset</string>
 
+    <!-- Lockscreen Colors -->
+    <string name="lockscreen_colors_title">Lockscreen colors</string>
+    <string name="lockscreen_owner_info_color">Owner info</string>
+    <string name="lockscreen_alarm_color">Alarm</string>
+    <string name="lockscreen_clock_color">Clock</string>
+    <string name="lockscreen_clock_date_color">Date</string>
+    <string name="lockscreen_colors_reset_title">Reset lockscreen colors</string>
+    <string name="lockscreen_colors_reset_message">Are you sure you want to reset these colors to default?</string>
+    <string name="yes">YES</string>
+
 </resources>
