--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -739,4 +739,14 @@
     <string name="show_settings_drawer_enabled">Settings drawer enabled</string>
     <string name="show_settings_drawer_disabled">Settings drawer disabled</string>
 
+    <!-- Lockscreen Colors -->
+    <string name="lockscreen_colors_title">Lockscreen colors</string>
+    <string name="lockscreen_owner_info_color">Owner info</string>
+    <string name="lockscreen_alarm_color">Alarm</string>
+    <string name="lockscreen_clock_color">Clock</string>
+    <string name="lockscreen_clock_date_color">Date</string>
+    <string name="lockscreen_colors_reset_title">Reset lockscreen colors</string>
+    <string name="lockscreen_colors_reset_message">Are you sure you want to reset these colors to default?</string>
+    <string name="yes">YES</string>
+
 </resources>
