Blur: Color Filters implementation (2/2)
- Since a part of the code was already available in the Blur base code, let's fix the remaining stuff and use it.

How does it works?

- It uses the lightness level of the background in use to determine which color to apply for the Blur bckground. So for example the background is a more lighter one a different color will be used and so on...
- If this cannot be determined, a third type of color filter will be used which is like a sort of mixed combination of the other two  ones, which kinda good looking.

There are three color filters:

- Light color filter (Used for Light backgrounds)
- Dark color filter (Used for Dark backgrounds)
- Mixed color filter (Used for Dark/light backgrounds)

- I made the colors to be applied simultaneously for both Blur backgrounds: StatusBar and RecentApps ones.
- I took this decision because in my opinion there's no reason to make three more different ColorPicker preferences just for Recents, if there will be requests on that it will be implemented. But for now we stick to this.

Change-Id: I11b1d2ed83c07c4be5050117c2e48b40bb652929
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -613,7 +613,13 @@
     <string name="blurred_radius_summary">Amount of blur</string>
     <string name="blur_cat_notice">Notice</string>
     <string name="blur_cat_notice_summary">Blur personalizations are automatically disabled during Keyguard view!</string>
-
+    <string name="blur_colors_cat">Blur Color filters</string>
+    <string name="blur_light_color">Light image color filter</string>
+    <string name="blur_dark_color">Dark image color filter</string>
+    <string name="blur_mixed_color">Mixed image color filter</string>
+    <string name="blur_colors_notice">What are these colors for?</string>
+    <string name="blur_colors_notice_summary">These colors are the ones tinting the BlurBackground. Instead of the normal Grey, you can now choose colors in any way you like.\nThere are three color filters available for: Light backgrounds, Dark backgrounds and Light/Dark backgrounds.\nSo how are these colors working?? \n Simple, as the titles say, the Light filter will be used for Lighter backgrounds, Dark filter for dark backgrounds and the mixed filter one will be used for backgrounds not too dark but neither too light.\nThese colors are used for both BlurBackgrounds: NotificationsDrawer and RecentsApps </string>
+ 
     <!-- App sidebar -->
     <string name="app_sidebar_title">App side bar</string>
     <string name="app_sidebar_enable_title">Enable Appbar</string>
