AE: Ability to enable/disable settings drawer [2/2]
Change-Id: I56bb2b8b9a6d18a465c48a5a3273cc4a1a41f83b
Signed-off-by: Varun Date <date.varun123@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -734,4 +734,9 @@
     <string name="reset_android">Android</string>
     <string name="reset">Reset</string>
 
+    <!-- Settings drawer switch -->
+    <string name="show_settings_drawer_title">Show settings drawer</string>
+    <string name="show_settings_drawer_enabled">Settings drawer enabled</string>
+    <string name="show_settings_drawer_disabled">Settings drawer disabled</string>
+
 </resources>
