--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="continue_title">Continue</string>
     <string name="settings_activity_title">AE settings</string>
     <string name="recents_panel_title">Recents panel</string>
+    <string name="quick_settings_title">Quick settings</string>
 
     <string name="nothing_title">Nothing to see here yet, move along.</string>
 
