AicpExtras: replace downloads with link to OTA Centre
also reorder about layout alphabetically

Change-Id: I2900f222f63e26330c58d4e557a5516c70d94959

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,8 +38,8 @@
     <string name="notificaitons_title">Notification drawer</string>
     <string name="statubar_title">Status bar</string>
     <string name="lockscreen_title">Lock screen</string>
-    <string name="aicp_downloads_title">Downloads</string>
-    <string name="dwnld_summary">Visit the AICP download page for your device.</string>
+    <string name="aicp_ota_title">OTA Centre</string>
+    <string name="ota_summary">Check for updates to the current ROM</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="ae_version_title">AICP Extras version</string>
     <string name="ae_version_summary">0.3.0</string>
