--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -48,6 +48,7 @@
     <string name="continue_title">Continuar</string>
     <string name="settings_activity_title">Ajustes de Extras AICP</string>
     <string name="recents_panel_title">Panel de aps. recientes</string>
+    <string name="quick_settings_title">Ajustes rápidos</string>
 
     <string name="nothing_title">Nada que ver aquí por ahora.</string>
 
@@ -596,9 +597,8 @@
     <string name="blur_dark_color">Imágen oscura</string>
     <string name="blur_mixed_color">Imágen mixta</string>
     <string name="blur_colors_notice">¿Para qué son estos colores?</string>
-    <string name="blur_colors_notice_summary">Estos colores pintan el fondo difuminado. En vez de usar el color gris, se pueden elegir los colores que
-se deseen.\nHay tres filtros de colores disponibles para: Fondos claros, Fondos oscuros y Fondos claros/oscuros.\n¿Cómo funcionan estos colores?\n
-Simple, como el título indica, el filtro claro se usará en fondos claros, el filtro oscuro en fondos oscuros y el filtro mixo para fondos que no son ni demasiado claros ni demasiado oscuros.\nEstos colores se usan para los dos fondos difuminados: Panel de notificaciones y panel de aps. recientes </string>
+    <string name="blur_colors_notice_summary">Estos colores pintan el fondo difuminado. En vez de usar el color gris, se pueden elegir los colores que se deseen.\nHay tres filtros de colores disponibles para: Fondos claros, Fondos oscuros y Fondos claros/oscuros.\n¿Cómo funcionan estos colores?\n Simple, como el título indica, el filtro claro se usará en fondos claros, el filtro oscuro en fondos oscuros y el filtro mixo para fondos que no son ni demasiado claros ni demasiado oscuros.\nEstos colores se usan para los dos fondos difuminados: Panel de notificaciones y panel de aps. recientes </string>
+    <string name="blur_default_colors_title">Restablecer colores predeterminados</string>
 
     <!-- App sidebar -->
     <string name="app_sidebar_title">Barra de aplicaciones</string>
