AicpExtras: OTA Center spanish translations
Change-Id: Ia6d42cdfb4aeb8455eb0edfdbe2c16370cabd1cb

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -38,6 +38,8 @@
     <string name="lockscreen_title">Pantalla de bloqueo</string>
     <string name="aicp_downloads_title">Descargas</string>
     <string name="dwnld_summary">Visitar la página de descargas de AICP para tu dispositivo</string>
+    <string name="aicp_ota_title">Sistema OTA</string>
+    <string name="ota_summary">Comprobar actualizaciones de la ROM actual</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="gerrit_summary">Visitar nuestro Gerrit para saber en qué estamos trabajando</string>
     <string name="ae_version_title">Versión de Extras AICP</string>
