Changelog overhaul!!! - WIP
Change-Id: I9ec222417bdd972e25eff804ff9de43c63115924

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -765,4 +765,9 @@
     <string name="hide_lockscreen_clock_title">Show lockscreen clock</string>
     <string name="hide_lockscreen_date_title">Show lockscreen date</string>
 
+    <!-- Hide Lockscreen clock & date -->
+    <string name="changelog_name">Changelog</string>
+    <string name="commit_id">Lockscreen Commit ID</string>
+    <string name="commit_message">Commit message</string>
+
 </resources>
